--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,3 +47,23 @@ input  ::-webkit-inner-spin-button {
     @apply text-white;
   } 
 }
+.banner {
+  background-image: url('https://papers.co/wallpaper/papers.co-ai16-pepper-red-hot-food-art-35-3840x2160-4k-wallpaper.jpg');
+  background-position:  center;
+  background-repeat:  no-repeat;
+  background-size: cover;
+}
+
+.backdrop_shaders {
+  background : radial-gradient(
+    50% 50% at 50% 50% ,
+    #180f34 0%,
+    rgba(0,0,0,0) 100%
+  );
+  flex :none;
+  inset : -273px 290px 51px -557px;
+  overflow : hidden ;
+  position : absolute ;
+  top : 90px ;
+  z-index : -1 ;
+}
